--- a/index.html
+++ b/index.html
@@ -9,5 +9,18 @@
 <body>
     <h1>HELLO GUYS!</h1>
     <li>Semangat PKL lah kawan-kawan :)</li>
+    <div class="container">
+  <div class="row">
+    <div class="col">
+      Column
+    </div>
+    <div class="col">
+      Column
+    </div>
+    <div class="col">
+      Column
+    </div>
+  </div>
+</div>
 </body>
 </html>
